--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "main": "src/main.js",
   "dependencies": {
-    "requirejs": "~2.1.8"
+    "handlebars": "~1.0.0",
+    "jquery": "~2.0.3",
+    "requirejs": "~2.1.8",
+    "requirejs-hbs": "*",
+    "requirejs-text": "~2.0.7"
   },
   "ignore": [
     "**/.*",
