Cleaning up a bit

--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
   "name": "slides",
   "version": "0.0.1",
-  "description": "slides is a simple javascript program that reads a structured html document and displays the single sections of this document page-wise in a form of a slide-show",
+  "description": "Slides is a very basic application that reads a structured html document and displays sections of this document page-wise in a form of a slide show",
   "main": "main.js",
   "scripts": {
     "test": "qunit"
   },
   "repository": {
     "type": "git",
-    "url": "http://git.netronaut.de/"
+    "url": "https://github.com/jhohlfeld/slides"
   },
-  "author": "Jakob Hohlfels",
-  "license": "BSD",
-  "devDependencies": {
-    "grunt": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-jshint": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-copy": "latest"
-  }
+  "author": "Jakob Hohlfeld",
+  "license": "MIT"
 }
